# tdsr

./: .editorconfig  .gitignore  mac  pylintrc  pyproject.toml  readme.md  requirements.txt  speechdispatcher  stream.py  tdsr  tdsr.cfg.dist
tdsr/: __init__.py  __main__.py  tdsr.py
tdsr/backend/: mac.py
