[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tdsr"
authors = [
    {name = "Tyler Spivey", email = "tspivey@pcdesk.net"}
]
readme = "readme.md"
license = {file = "COPYING.txt"}
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Objective C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Adaptive Technologies"
]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
	"pyobjc; sys_platform=='darwin'",
	"pyte >=0.8.1,<1",
	"wcwidth"
]

[project.urls]
Home = "https://github.com/tspivey/tdsr"

[project.scripts]
tdsr = "tdsr.__main__:main"
